--- a/.npmignore
+++ b/.npmignore
@@ -1,12 +1,13 @@
 .vscode/
+node_modules/
 
 client/app/
 client/node_modules/
 client/tsconfig.json
 client/webpack.config.js
 
-server/node_modules/
 server/src/
+server/node_modules/
 server/tsconfig.json
 
 .gitignore
