--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "build": "tsc"
   },
@@ -13,7 +13,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "cors": "^2.8.5",
+    "cors": "2.8.5",
     "express": "^4.21.2",
     "glob": "^11.0.1",
     "mailparser": "^3.7.2",
